--- a/public/index.html
+++ b/public/index.html
@@ -77,9 +77,12 @@
 
   <div class="hints">
     <p>🧂 Salt used: <code>salt123</code></p>
-    <p>🧠 Hint 1: The password is a common food item followed by random numbers.</p>
-    <p>🧠 Hint 2: Concatenate the password and salt before hashing (e.g. password + salt).</p>
-    <p>🛠 Hint 3: You can verify your result using CyberChef, a terminal command, or Google Colab.</p>
+    <button onclick="showHint('hint1-1')">Show Hint 1</button>
+    <p id="hint1-1" style="display: none;">🧠 Hint 1: The password is a common food item followed by random numbers.</p><br>
+    <button onclick="showHint('hint1-2')">Show Hint 2</button>
+    <p id="hint1-2" style="display: none;">🧠 Hint 2: Concatenate the password and salt before hashing (e.g. password + salt).</p><br>
+    <button onclick="showHint('hint1-3')">Show Hint 3</button>
+    <p id="hint1-3" style="display: none;">🛠 Hint 3: You can verify your result using CyberChef, a terminal command, or Google Colab.</p>
   </div>
 
   <form id="flagForm1">
