--- a/public/index.html
+++ b/public/index.html
@@ -113,6 +113,14 @@
       messageDiv.style.color = "#f44336";
     }
   });
+
+  <script>
+  function showHint(id) {
+    const hint = document.getElementById(id);
+    if (hint) hint.style.display = 'block';
+  }
+</script>
+
 </script>
 
 </body>
