Update index.html with lvl2

--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,28 @@
   </form>
 </div>
 
+<div class="container" id="level2" style="display: none;">
+  <h1>🔒 Crypto CTF - Level 2</h1>
+  <p><strong>Scenario:</strong> After decrypting the vault’s hash, you find a second encoded message with a label: <code>base64::b3JpZ2luYWxCYXNlNjRTdHJpbmc=</code>. But it’s not so simple—there’s a trick to it.</p>
+
+  <p>🔐 <strong>Encrypted String:</strong></p>
+  <code>YmFzZTY0OjpiM0pwWjJsdUxtTnZiUzkzYjJjdVkyOXRJQT09</code>
+
+  <div class="hints">
+    <button onclick="showHint('hint2-1')">Show Hint 1</button>
+    <p id="hint2-1" style="display: none;">🧠 Hint 1: Remove the <code>base64::</code> prefix from the decoded string before the second decode.</p><br>
+    <button onclick="showHint('hint2-2')">Show Hint 1</button>
+    <p id="hint2-2" style="display: none;">🧠 Hint 2: You’ll need to decode twice using base64.</p><br>
+  </div>
+
+  <form id="flagForm2">
+    <input type="text" id="flagInput2" placeholder="Enter the flag..." required>
+    <button type="submit">Submit</button>
+    <div class="message" id="message2"></div>
+  </form>
+</div>
+
+
 <script>
   document.getElementById("flagForm1").addEventListener("submit", async function(e) {
     e.preventDefault();
@@ -100,14 +122,22 @@
     const response = await fetch("/.netlify/functions/checkFlag", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ flag })
+      body: JSON.stringify({ flag, level: "1" }) 
     });
 
     const result = await response.json();
     const messageDiv = document.getElementById("message1");
+
     if (result.correct) {
       messageDiv.textContent = "✅ Correct! Well done.";
       messageDiv.style.color = "#4caf50";
+
+      // Show Level 2
+      setTimeout(() => {
+        document.getElementById("level1").style.display = "none";
+        document.getElementById("level2").style.display = "block";
+      }, 1000);
+
     } else {
       messageDiv.textContent = "❌ Incorrect, try again.";
       messageDiv.style.color = "#f44336";
@@ -118,8 +148,8 @@
     const hint = document.getElementById(id);
     if (hint) hint.style.display = 'block';
   }
-
 </script>
 
+  
 </body>
 </html>
