--- a/public/index.html
+++ b/public/index.html
@@ -182,43 +182,80 @@
       messageDiv.style.color = "#f44336";
     }
   });
-    // Handle Level 2 Submission
-document.getElementById("submitBtn2").addEventListener("click", async function (e) {
-  e.preventDefault();
 
-  const flag = document.getElementById("flagInput2").value;
+  // Handle Level 2 Submission
+  document.getElementById("submitBtn2").addEventListener("click", async function (e) {
+    e.preventDefault();
 
-  const response = await fetch("/.netlify/functions/checkFlag", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ flag, level: "2" })
+    const flag = document.getElementById("flagInput2").value;
+
+    const response = await fetch("/.netlify/functions/checkFlag", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ flag, level: "2" })
+    });
+
+    const result = await response.json();
+    const messageDiv = document.getElementById("message2");
+
+    if (result.correct) {
+      messageDiv.textContent = "✅ Correct! You solved Level 2!";
+      messageDiv.style.color = "#4caf50";
+
+      // Transition to Level 3
+      setTimeout(() => {
+        document.getElementById("level2").classList.remove("show");
+        document.getElementById("level2").style.display = "none";
+
+        const level3 = document.getElementById("level3");
+        level3.classList.add("show");
+        level3.style.display = "block";
+      }, 1000);
+    } else {
+      messageDiv.textContent = "❌ Incorrect, try again.";
+      messageDiv.style.color = "#f44336";
+    }
   });
 
-  const result = await response.json();
-  const messageDiv = document.getElementById("message2");
+  // Handle Level 3 Submission
+  document.getElementById("submitBtn3").addEventListener("click", async function (e) {
+    e.preventDefault();
 
-  if (result.correct) {
-    messageDiv.textContent = "✅ Correct! You solved Level 2!";
-    messageDiv.style.color = "#4caf50";
+    const flag = document.getElementById("flagInput3").value;
 
-    // Transition to Level 3
-    setTimeout(() => {
-      document.getElementById("level2").classList.remove("show");
-      document.getElementById("level2").style.display = "none";
+    const response = await fetch("/.netlify/functions/checkFlag", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ flag, level: "3" })
+    });
 
-      const level3 = document.getElementById("level3");
-      level3.classList.add("show");
-      level3.style.display = "block";
-    }, 1000);
-  } else {
-    messageDiv.textContent = "❌ Incorrect, try again.";
-    messageDiv.style.color = "#f44336";
-  }
-});
+    const result = await response.json();
+    const messageDiv = document.getElementById("message3");
+
+    if (result.correct) {
+      messageDiv.textContent = "✅ Flag found! Congratulations, you've completed the challenge!";
+      messageDiv.style.color = "#4caf50";
+    } else {
+      messageDiv.textContent = "❌ Incorrect flag. Try again.";
+      messageDiv.style.color = "#f44336";
+    }
+  });
 
   function showHint(id) {
     const hint = document.getElementById(id);
     if (hint) hint.style.display = 'block';
+  }
+
+  // Function to download ciphertext for Level 3
+  function downloadCiphertext() {
+    const ciphertext = "ciphertext_here"; // Put your encrypted message or file content here
+    const blob = new Blob([ciphertext], { type: "text/plain;charset=utf-8" });
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement("a");
+    a.href = url;
+    a.download = "ciphertext.txt";
+    a.click();
+    URL.revokeObjectURL(url);
   }
 </script>
 
