--- a/public/index.html
+++ b/public/index.html
@@ -246,17 +246,13 @@
     if (hint) hint.style.display = 'block';
   }
 
-  // Function to download ciphertext for Level 3
   function downloadCiphertext() {
-    const ciphertext = "ciphertext_here"; // Put your encrypted message or file content here
-    const blob = new Blob([ciphertext], { type: "text/plain;charset=utf-8" });
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement("a");
-    a.href = url;
-    a.download = "ciphertext.txt";
-    a.click();
-    URL.revokeObjectURL(url);
+    const link = document.createElement('a');
+    link.href = '/public/ciphertext.txt';  // Update the path to where your file is stored
+    link.download = 'ciphertext.txt';  // The name that will appear when the file is downloaded
+    link.click();
   }
+
 </script>
 
 </body>
