--- a/public/index.html
+++ b/public/index.html
@@ -248,7 +248,7 @@
 
   function downloadCiphertext() {
     const link = document.createElement('a');
-    link.href = '/public/ciphertext.txt';  // Update the path to where your file is stored
+    link.href = '/ciphertext.txt';  // Update the path to where your file is stored
     link.download = 'ciphertext.txt';  // The name that will appear when the file is downloaded
     link.click();
   }
