--- a/public/index.html
+++ b/public/index.html
@@ -122,14 +122,14 @@
   <p><strong>Scenario:</strong> After cracking the previous levels, you’ve discovered a hidden flag stored in an encrypted message using RSA encryption. The ciphertext has been locked away with a public key. Your task is to decrypt it and reveal the flag!</p>
 
   <p><strong>RSA Public Key:</strong></p>
-  <code>n = 391, e = 3</code>
+  <code>N = 432, e = 3</code>
   
   <p><strong>Decryption Formula:</strong></p>
   <p><code>m = c^d mod n</code></p>
 
   <div class="hints">
     <button onclick="showHint('hint3-1')">Show Hint 1</button>
-    <p id="hint3-1" style="display: none;">🧠 Hint 1: Factor <code>n = 391</code> to find two prime numbers.</p><br>
+    <p id="hint3-1" style="display: none;">🧠 Hint 1: Factor <code>n = 432</code> to find two prime numbers.</p><br>
     <button onclick="showHint('hint3-2')">Show Hint 2</button>
     <p id="hint3-2" style="display: none;">🧠 Hint 2: Calculate <code>φ(n) = (p - 1) * (q - 1)</code>.</p><br>
     <button onclick="showHint('hint3-3')">Show Hint 3</button>
@@ -143,7 +143,7 @@
   </div>
 
   <div id="flagForm3">
-    <input type="text" id="flagInput3" placeholder="Enter the decrypted flag..." required>
+    <input type="text" id="flagInput3" placeholder="Enter the decrypted flag... using the flag{...} format" required>
     <button id="submitBtn3">Submit</button>
     <div class="message" id="message3"></div>
   </div>
