--- a/public/index.html
+++ b/public/index.html
@@ -79,11 +79,11 @@
 
   <div class="hints">
     <p>🧂 Salt used: <code>salt123</code></p>
-    <button onclick="showHint('hint1-1')">Show Hint 1</button>
-    <p id="hint1-1" style="display: none;">🧠 Hint 1: The password is a common food item followed by random numbers.</p><br>
-    <button onclick="showHint('hint1-2')">Show Hint 2</button>
-    <p id="hint1-2" style="display: none;">🧠 Hint 2: Concatenate the password and salt before hashing (e.g. password + salt).</p><br>
-    <button onclick="showHint('hint1-3')">Show Hint 3</button>
+    <button onclick="showHint('hint1-1')">Show Hint 1</button><br>
+    <p id="hint1-1" style="display: none;">🧠 Hint 1: The password is a common food snack item followed by random numbers.</p>
+    <button onclick="showHint('hint1-2')">Show Hint 2</button><br>
+    <p id="hint1-2" style="display: none;">🧠 Hint 2: Concatenate the password and salt before hashing (e.g. password + salt).</p>
+    <button onclick="showHint('hint1-3')">Show Hint 3</button><br>
     <p id="hint1-3" style="display: none;">🛠 Hint 3: You can verify your result using CyberChef, a terminal command, or Google Colab.</p>
   </div>
 
@@ -103,10 +103,10 @@
   <code>YmFzZTY0OjpiM0pwWjJsdUxtTnZiUzkzYjJjdVkyOXRJQT09</code>
 
   <div class="hints">
-    <button onclick="showHint('hint2-1')">Show Hint 1</button>
-    <p id="hint2-1" style="display: none;">🧠 Hint 1: Remove the <code>base64::</code> prefix from the decoded string before the second decode.</p><br>
-    <button onclick="showHint('hint2-2')">Show Hint 2</button>
-    <p id="hint2-2" style="display: none;">🧠 Hint 2: You’ll need to decode twice using base64.</p><br>
+    <button onclick="showHint('hint2-1')">Show Hint 1</button><br>
+    <p id="hint2-1" style="display: none;">🧠 Hint 1: Remove the <code>base64::</code> prefix from the decoded string before the second decode.</p>
+    <button onclick="showHint('hint2-2')">Show Hint 2</button><br>
+    <p id="hint2-2" style="display: none;">🧠 Hint 2: You’ll need to decode twice using base64.</p>
   </div>
 
   <div id="flagForm2">
@@ -128,13 +128,13 @@
   <p><code>m = c^d mod n</code></p>
 
   <div class="hints">
-    <button onclick="showHint('hint3-1')">Show Hint 1</button>
-    <p id="hint3-1" style="display: none;">🧠 Hint 1: Factor <code>n = 432</code> to find two prime numbers.</p><br>
-    <button onclick="showHint('hint3-2')">Show Hint 2</button>
-    <p id="hint3-2" style="display: none;">🧠 Hint 2: Calculate <code>φ(n) = (p - 1) * (q - 1)</code>.</p><br>
-    <button onclick="showHint('hint3-3')">Show Hint 3</button>
-    <p id="hint3-3" style="display: none;">🧠 Hint 3: Use modular inverse to find <code>d</code>.</p><br>
-    <button onclick="showHint('hint3-4')">Show Hint 4</button>
+    <button onclick="showHint('hint3-1')">Show Hint 1</button><br>
+    <p id="hint3-1" style="display: none;">🧠 Hint 1: Factor <code>n = 432</code> to find two prime numbers.</p>
+    <button onclick="showHint('hint3-2')">Show Hint 2</button><br>
+    <p id="hint3-2" style="display: none;">🧠 Hint 2: Calculate <code>φ(n) = (p - 1) * (q - 1)</code>.</p>
+    <button onclick="showHint('hint3-3')">Show Hint 3</button><br>
+    <p id="hint3-3" style="display: none;">🧠 Hint 3: Use modular inverse to find <code>d</code>.</p>
+    <button onclick="showHint('hint3-4')">Show Hint 4</button><br>
     <p id="hint3-4" style="display: none;">🧠 Hint 4: Once decrypted, convert the numbers to ASCII to get the flag.</p>
   </div>
 
