--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
   <div class="hints">
     <p>🧂 Salt used: <code>salt123</code></p>
     <button onclick="showHint('hint1-1')">Show Hint 1</button><br>
-    <p id="hint1-1" style="display: none;">🧠 Hint 1: The password is a common food snack item followed by random numbers. +it is a type snack we can always see in our convinience store</p>
+    <p id="hint1-1" style="display: none;">🧠 Hint 1: The password is a common food snack item followed by 5 random numbers from 1-5. +it is a type snack we can always see in our convinience store</p>
     <button onclick="showHint('hint1-2')">Show Hint 2</button><br>
     <p id="hint1-2" style="display: none;">🧠 Hint 2: Concatenate the password and salt before hashing (e.g. password + salt).</p>
     <button onclick="showHint('hint1-3')">Show Hint 3</button><br>
