--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
   </div>
 
   <div id="flagForm2">
-    <input type="text" id="flagInput2" placeholder="Enter the flag..." required>
+    <input type="text" id="flagInput2" placeholder="Enter the password" required>
     <button id="submitBtn2">Submit</button>
     <div class="message" id="message2"></div>
   </div>
