--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,11 @@
   </div>
 </div>
 
+  <div class="container hidden" id="completion">
+  <h1>🏆 Congratulations!</h1>
+  <p>You solved all the levels and found the flag! 🎉</p>
+</div>
+  
 <script>
   // Handle Level 1 Submission
   document.getElementById("submitBtn1").addEventListener("click", async function (e) {
