--- a/public/index.html
+++ b/public/index.html
@@ -93,12 +93,11 @@
 
 <!-- Entry Gate -->
 <div class="container show" id="entryContainer">
-  <h1>⚠️ Welcome to Crypto CTF! ⚠️</h1>
-  <p><strong>REQUIRED:</strong> Before you can begin this challenge, enter the flag you obtained from the Week 1 CTF.</p>
+  <h1>🔒 Welcome to Crypto CTF! 🔒</h1>
+  <p><strong>⚠️REQUIRED:</strong> Before you can begin this challenge, enter the flag you obtained from the Week 1 CTF.</p>
   
   <div class="terminal-text">
-    <p>> Validating credentials...</p>
-    <p>> Enter authorization code:</p>
+    <p>> Enter Week 1 Flag:</p>
   </div>
   
   <div id="flagEntryForm">
