--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CTF Challenge Entry</title>
+  <title>Week 2 CTF Challenge</title>
   <style>
     body {
       background: #1a1a1a;
