--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,7 @@
   </div>
 
   <div>
-    <a href="/ciphertext.txt" download>Download Ciphertext</a>
+    <a href="/ciphertext.txt" download style="color: blue;>Download Ciphertext</a>
   </div>
 
   <div id="flagForm3">
