--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,15 @@
       75% { transform: translateX(-10px); }
       100% { transform: translateX(0); }
     }
+    .download-link {
+    color: #00bfff; 
+    font-weight: bold;
+    text-decoration: none; 
+  }
+  .download-link:hover {
+    text-decoration: underline;
+    color: #ff4500; 
+  }
   </style>
 </head>
 <body>
