--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,7 @@
   </div>
 
   <div>
-    <a href="/ciphertext.txt" download style="color: blue;>Download Ciphertext</a>
+    <a href="/ciphertext.txt" download class="download-link">Download Ciphertext</a>
   </div>
 
   <div id="flagForm3">
