--- a/level1.html
+++ b/level1.html
@@ -90,28 +90,26 @@
   </style>
 </head>
 <body>
-  <!-- Level 1 -->
-<div class="container" id="level1">
-  <h1>🔒 Crypto CTF - Level 1</h1>
-  <p><strong>Scenario:</strong> A hacker has encrypted a password used to unlock a digital vault using SHA-256 with a salt. Your mission is to reverse-engineer what the original password was, given only the final hash.</p>
+ <!-- Level 2 -->
+<div class="container" id="level2">
+  <h1>🔒 Crypto CTF - Level 2</h1>
+  <p><strong>Scenario:</strong> After decrypting the vault's hash, you find a second encoded message with a label: <code>base64::b3JpZ2luYWxCYXNlNjRTdHJpbmc=</code>. But it's not so simple—there's a trick to it.</p>
 
-  <p>🔐 <strong>Target SHA-256 hash:</strong></p>
-  <code>ec4fbc87fabefbf59cc72492b0f273e7889e7c137fc5e3c406ae27515845ddc5</code>
+  <p>🔐 <strong>Encrypted String:</strong></p>
+  <code>YmFzZTY0OjpiM0pwWjJsdUxtTnZiUzkzYjJjdVkyOXRJQT09</code>
 
   <div class="hints">
-    <p>🧂 Salt used: <code>salt123</code></p>
-    <button onclick="showHint('hint1-1')">Show Hint 1</button>
-    <p id="hint1-1" style="display: none;">🧠 Hint 1: The password is a common food item followed by random numbers.</p><br>
-    <button onclick="showHint('hint1-2')">Show Hint 2</button>
-    <p id="hint1-2" style="display: none;">🧠 Hint 2: Concatenate the password and salt before hashing (e.g. password + salt).</p><br>
-    <button onclick="showHint('hint1-3')">Show Hint 3</button>
-    <p id="hint1-3" style="display: none;">🛠 Hint 3: You can verify your result using CyberChef, a terminal command, or Google Colab.</p>
+    <button onclick="showHint('hint2-1')">Show Hint 1</button>
+    <p id="hint2-1" style="display: none;">🧠 Hint 1: Remove the <code>base64::</code> prefix from the decoded string before the second decode.</p><br>
+    <button onclick="showHint('hint2-2')">Show Hint 2</button>
+    <p id="hint2-2" style="display: none;">🧠 Hint 2: You'll need to decode twice using base64.</p><br>
   </div>
 
-  <div class="navigation">
-    <a href="level2.html"><button>Next Level</button></a>
+ <div class="navigation">
+    <a href="level1.html"><button>Back</button></a>
+    <a href="level3.html"><button>Next Level</button></a>
   </div>
-
+  
   <script>
   function showHint(id) {
     const hint = document.getElementById(id);
