--- a/level2.html
+++ b/level2.html
@@ -109,7 +109,8 @@
   </div>
 
   <div class="navigation">
-    <a href="level2.html"><button>Next Level</button></a>
+    <a href="index.html"><button>Back</button></a>
+    <a href="level3.html"><button>Next Level</button></a>
   </div>
 
   <script>
