--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 <body>
   <!-- Level 1 -->
-<div class="container" id="level1">
+<div>
   <h1>🔒 Crypto CTF - Level 1</h1>
   <p><strong>Scenario:</strong> A hacker has encrypted a password used to unlock a digital vault using SHA-256 with a salt. Your mission is to reverse-engineer what the original password was, given only the final hash.</p>
 
