--- a/index.html
+++ b/index.html
@@ -99,24 +99,15 @@
 
   <div class="hints">
     <p>🧂 Salt used: <code>salt123</code></p>
-    <button onclick="showHint('hint1-1')">Show Hint 1</button>
-    <p id="hint1-1" style="display: none;">🧠 Hint 1: The password is a common food item followed by random numbers.</p><br>
-    <button onclick="showHint('hint1-2')">Show Hint 2</button>
-    <p id="hint1-2" style="display: none;">🧠 Hint 2: Concatenate the password and salt before hashing (e.g. password + salt).</p><br>
-    <button onclick="showHint('hint1-3')">Show Hint 3</button>
-    <p id="hint1-3" style="display: none;">🛠 Hint 3: You can verify your result using CyberChef, a terminal command, or Google Colab.</p>
+    <p>🧠 Hint 1: The password is a common food item followed by random numbers.</p><br>
+    <p>🧠 Hint 2: Concatenate the password and salt before hashing (e.g. password + salt).</p><br>
+    <p>🛠 Hint 3: You can verify your result using CyberChef, a terminal command, or Google Colab.</p>
   </div>
 
   <div class="navigation">
     <a href="level2.html"><button>Next Level</button></a>
   </div>
 
-  <script>
-  function showHint(id) {
-    const hint = document.getElementById(id);
-    if (hint) hint.style.display = 'block';
-  }
- </script>
 
 </body>
 </html>
