--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
   <div class="hints">
     <p>🧂 Salt used: <code>salt123</code></p>
-    <p>🧠 Hint 1: The password is a common food item followed by random numbers.</p><br>
-    <p>🧠 Hint 2: Concatenate the password and salt before hashing (e.g. password + salt).</p><br>
+    <p>🧠 Hint 1: The password is a common food item followed by random numbers.</p>
+    <p>🧠 Hint 2: Concatenate the password and salt before hashing (e.g. password + salt).</p>
     <p>🛠 Hint 3: You can verify your result using CyberChef, a terminal command, or Google Colab.</p>
   </div>
 
